// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shuttle Map Page renders 1`] = `
<div
  className="m-shuttle-map "
>
  <div
    className="m-shuttle-picker-container visible"
    data-testid="shuttle-picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-shuttle-picker"
    >
      <div
        className="m-shuttle-picker__label"
      >
        Run #
      </div>
      <ul
        className="m-shuttle-picker__route-list m-shuttle-picker__shuttle-run-list"
      >
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--selected"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              All Specials (999*)
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            >
              1
            </span>
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--unselected"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              Special 999 555
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            >
              1
            </span>
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Blue 999 501
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Green 999 502
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Orange 999 503
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Red 999 504
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              CR 999 505
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
      </ul>
      <div
        className="m-shuttle-picker__label"
      >
        Routes
      </div>
    </div>
  </div>
  <div
    className="m-shuttle-map__map"
  >
    <div
      className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
    />
    <div
      className="m-vehicle-map"
      id="id-vehicle-map"
    />
  </div>
</div>
`;

exports[`Shuttle Map Page renders a selected shuttle vehicle 1`] = `
<div
  className="m-shuttle-map "
>
  <div
    className="m-shuttle-picker-container visible"
    data-testid="shuttle-picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-shuttle-picker"
    >
      <div
        className="m-shuttle-picker__label"
      >
        Run #
      </div>
      <ul
        className="m-shuttle-picker__route-list m-shuttle-picker__shuttle-run-list"
      >
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--unselected"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              All Specials (999*)
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            >
              1
            </span>
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--selected"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              Special 999 555
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            >
              1
            </span>
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Blue 999 501
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Green 999 502
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Orange 999 503
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Red 999 504
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              CR 999 505
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
      </ul>
      <div
        className="m-shuttle-picker__label"
      >
        Routes
      </div>
    </div>
  </div>
  <div
    className="m-shuttle-map__map"
  >
    <div
      className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
    />
    <div
      className="m-vehicle-map"
      id="id-vehicle-map"
    />
  </div>
  <div
    className="m-properties-panel"
    id="m-properties-panel"
  >
    <div
      className="m-vehicle-properties-panel"
    >
      <div
        className="m-properties-panel__header-wrapper"
      >
        <div
          className="m-properties-panel__header"
        >
          <div
            className="m-properties-panel__label"
          >
            <svg
              style={
                Object {
                  "height": 64,
                  "width": 64,
                }
              }
              viewBox="-32 -20 64 64"
            >
              <g
                className="m-vehicle-icon m-vehicle-icon--large"
              >
                <rect
                  className="m-vehicle-icon__label-background"
                  height={24}
                  rx={12}
                  ry={12}
                  width={64}
                  x={-32}
                  y={19}
                />
                <text
                  className="m-vehicle-icon__label m-vehicle-icon__label--normal"
                  dominantBaseline="central"
                  textAnchor="middle"
                  x="0"
                  y={31}
                >
                  1818
                </text>
                <path
                  className="m-vehicle-icon__triangle"
                  d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
                  transform="scale(1) rotate(0) translate(-24,-22)"
                />
                <text
                  className="m-vehicle-icon__variant"
                  dominantBaseline="alphabetic"
                  textAnchor="middle"
                  x={0}
                  y={14}
                >
                  4
                </text>
              </g>
            </svg>
          </div>
          <div
            className="m-properties-panel__variant"
          >
            <div
              className="m-properties-panel__inbound-outbound"
            >
              
            </div>
            <div
              className="m-route-variant-name"
            >
              Shuttle
            </div>
          </div>
          <div
            className="m-properties-panel__close-ping"
          >
            <button
              className="m-close-button"
              data-testid="close-button"
              onClick={[Function]}
              title="Close"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
            <div
              className="m-properties-panel__last-gps-ping"
            >
              -1557160073s ago
            </div>
          </div>
        </div>
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                Special 999 555
              </td>
            </tr>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Vehicle
              </td>
              <td
                className="m-properties-list__property-value"
              >
                1818
              </td>
            </tr>
            <tr
              className="m-properties-list__property m-properties-list__property--operator"
            >
              <td
                className="m-properties-list__property-label"
              >
                Operator
              </td>
              <td
                className="m-properties-list__property-value"
              >
                PATTI SMITH #op1
              </td>
            </tr>
            <tr
              className="m-properties-list__property m-properties-list__property--last-login"
            >
              <td
                className="m-properties-list__property-label"
              >
                Last Login
              </td>
              <td
                className="m-properties-list__property-value"
              >
                4 hr 3 min; 1:38 PM
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="m-vehicle-properties-panel__location"
      >
        <div
          className="m-vehicle-properties-panel__latlng"
        >
          <div
            className="m-vehicle-properties-panel__label"
          >
            Current Location
          </div>
          <a
            className="m-vehicle-properties-panel__link"
            href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
            rel="noreferrer"
            target="_blank"
          >
            Directions
          </a>
        </div>
        <div
          className="m-vehicle-properties-panel__next-stop"
        >
          <div
            className="m-vehicle-properties-panel__label"
          >
            Next Stop
          </div>
          <div
            className="m-vehicle-properties-panel__value"
          >
            <span
              className="m-vehicle-properties-panel__not-available"
            >
              Not available
            </span>
          </div>
        </div>
        <div
          className="m-vehicle-properties-panel__map"
        >
          <div
            className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
          />
          <div
            className="m-vehicle-map"
            id="id-vehicle-map"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    className="m-properties-panel__modal-overlay"
    onClick={[Function]}
  />
</div>
`;

exports[`Shuttle Map Page renders selected shuttle routes 1`] = `
<div
  className="m-shuttle-map "
>
  <div
    className="m-shuttle-picker-container visible"
    data-testid="shuttle-picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-shuttle-picker"
    >
      <div
        className="m-shuttle-picker__label"
      >
        Run #
      </div>
      <ul
        className="m-shuttle-picker__route-list m-shuttle-picker__shuttle-run-list"
      >
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--unselected"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              All Specials (999*)
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            >
              1
            </span>
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--selected"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              Special 999 555
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            >
              1
            </span>
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Blue 999 501
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Green 999 502
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Orange 999 503
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Red 999 504
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              CR 999 505
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
      </ul>
      <div
        className="m-shuttle-picker__label"
      >
        Routes
      </div>
    </div>
  </div>
  <div
    className="m-shuttle-map__map"
  >
    <div
      className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
    />
    <div
      className="m-vehicle-map"
      id="id-vehicle-map"
    />
  </div>
</div>
`;

exports[`Shuttle Map Page renders with all shuttles selected 1`] = `
<div
  className="m-shuttle-map "
>
  <div
    className="m-shuttle-picker-container visible"
    data-testid="shuttle-picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-shuttle-picker"
    >
      <div
        className="m-shuttle-picker__label"
      >
        Run #
      </div>
      <ul
        className="m-shuttle-picker__route-list m-shuttle-picker__shuttle-run-list"
      >
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--selected"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              All Specials (999*)
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            >
              1
            </span>
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--unselected"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              Special 999 555
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            >
              1
            </span>
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Blue 999 501
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Green 999 502
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Orange 999 503
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Red 999 504
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              CR 999 505
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
      </ul>
      <div
        className="m-shuttle-picker__label"
      >
        Routes
      </div>
    </div>
  </div>
  <div
    className="m-shuttle-map__map"
  >
    <div
      className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
    />
    <div
      className="m-vehicle-map"
      id="id-vehicle-map"
    />
  </div>
</div>
`;

exports[`Shuttle Map Page renders with shapes selected 1`] = `
<div
  className="m-shuttle-map "
>
  <div
    className="m-shuttle-picker-container visible"
    data-testid="shuttle-picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-shuttle-picker"
    >
      loading...
    </div>
  </div>
  <div
    className="m-shuttle-map__map"
  >
    <div
      className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
    />
    <div
      className="m-vehicle-map"
      id="id-vehicle-map"
    />
  </div>
</div>
`;

exports[`Shuttle Map Page renders with train vehicles 1`] = `
<div
  className="m-shuttle-map "
>
  <div
    className="m-shuttle-picker-container visible"
    data-testid="shuttle-picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-shuttle-picker"
    >
      <div
        className="m-shuttle-picker__label"
      >
        Run #
      </div>
      <ul
        className="m-shuttle-picker__route-list m-shuttle-picker__shuttle-run-list"
      >
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--selected"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              All Specials (999*)
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            >
              1
            </span>
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--unselected"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              Special 999 555
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            >
              1
            </span>
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Blue 999 501
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Green 999 502
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Orange 999 503
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              Red 999 504
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
        <li>
          <button
            className="m-shuttle-picker__route-list-button m-shuttle-picker__route-list-button--with-count m-shuttle-picker__route-list-button--disabled"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="m-shuttle-picker__route-list-button-name"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
              CR 999 505
            </span>
            <span
              className="m-shuttle-picker__route-list-button-count"
            />
          </button>
        </li>
      </ul>
      <div
        className="m-shuttle-picker__label"
      >
        Routes
      </div>
    </div>
  </div>
  <div
    className="m-shuttle-map__map"
  >
    <div
      className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
    />
    <div
      className="m-vehicle-map"
      id="id-vehicle-map"
    />
  </div>
</div>
`;
